Trying to fix the button spacing on the text and image grid
This is a bit funky because I could make a loop to add an if statement to ignore the content if there's not text BUT then in cloud cannon it's like an extra step to add paragraph text - so I'll leave it for now and if the text is empty in the second paragraph, there's just a bit more space between the text and button (better I think than being too squished)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -725,6 +725,9 @@ video {
 .pt-6 {
     padding-top: 1.5rem;
 }
+.pt-5 {
+    padding-top: 1.25rem;
+}
 .text-center {
     text-align: center;
 }
@@ -858,6 +861,9 @@ footer a:hover {
     .sm\:px-16 {
         padding-left: 4rem;
         padding-right: 4rem;
+    }
+    .sm\:pb-0 {
+        padding-bottom: 0px;
     }
 }
 
